ey-cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: ey-cart
  namespace: noel-ns
  labels:
    app: ey-cart-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cartapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: cartapp
    spec:
      containers:
        - name: ey-cart-container
          image: muralisocial123/ey-cart:v1.1.0
          ports:
            - containerPort: 80
