max.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-app
  namespace: noel-ns
  labels:
    app: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: ey-noel
          image: muralisocial123/ey-cart:v1.1.0
          ports:
            - containerPort: 3000
