fitness-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: fitnessapp
  namespace: noel-ns
  labels:
    app: web
spec:
  replicas: 8
  selector:
    matchLabels:
      app: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 2
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: fitnes-container
          image: muralisocial123/transaction-app:v1.0.0
          ports:
            - containerPort: 3000    

---

apiVersion: v1
kind: Service
metadata:
  name: fitness-deploy-svc  
  namespace: noel-ns
spec:
  selector:
    app: web
  ports:
    - port: 3001 # it is the port we use to expose hostport
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
