fit-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fitness-route
  namespace: noel-ns
spec:
  parentRefs:
    - name: noel-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
      backendRefs:
        - name: fitness-tracker-service
          namespace: fitness-app
          port: 80
