new-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fitness-route
  namespace: noel-ns
spec:
  parentRefs:
    - name: noel-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: fitness-tracker-service
          port: 5000

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hms-route
  namespace: noel-ns
spec:
  parentRefs:
    - name: noel-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hms
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: hospital-service
          port: 5000
